--- a/data/cards/20003527.yaml
+++ b/data/cards/20003527.yaml
@@ -21,7 +21,7 @@ text:
   es: |-
     Esta carta no puede ser destruida en batalla. Si esta carta está en Posición de Defensa boca arriba, destrúyela. Puedes Sacrificar cualquier cantidad de monstruos de AGUA para la Invocación por Sacrificio de esta carta. Cuando esta carta es Invocada por Sacrificio, pon 1 Contador de Niebla en ella por cada monstruo de AGUA que Sacrificaste. Esta carta gana 500 ATK por cada Contador de Niebla en el Campo.
   fr: |-
-    Cette carte ne peut pas être détruite au combat. Si cette carte est en Position de Défense face recto, détruisez-la. Vous pouvez Sacrifier un nombre de votre choix de monstres EAU pour faire l'Invocation Sacrifice de cette carte. Lorsque cette carte est Invoquée par Sacrifice, placez 1 Compteur Brume pour chaque monstre EAU Sacrifié. Augmentez l'ATK de cette carte de 500 points pour chaque Compteur Brume sur le Terrain.
+    Non destructible au combat. Si cette carte est en Position de Défense face recto, détruisez-la. Vous pouvez Sacrifier un nombre de votre choix de monstres EAU pour l’Invocation Sacrifice de cette carte. Si cette carte est Invoquée par Sacrifice : placez 1 Compteur Brume sur elle pour chaque monstre EAU que vous avez Sacrifié. Cette carte gagne 500 ATK pour chaque Compteur Brume sur le Terrain.
   it: |-
     Questa carta non può essere distrutta in battaglia. Se questa carta è scoperta in Posizione di Difesa, distruggila. Puoi offrire come Tributo un qualsiasi numero di mostri ACQUA per l'Evocazione tramite Tributo di questa carta. Quando questa carta viene Evocata tramite Tributo, metti 1 Segnalino Nebbia su questa carta per ogni mostro ACQUA offerto come Tributo. Questa carta guadagna 500 ATK per ogni Segnalino Nebbia sul Terreno.
   pt:
