--- a/rush.yaml
+++ b/rush.yaml
@@ -71208,6 +71208,8 @@ def: 0
 images:
 - index: 1
   image: TheStrangeSpecterofCelestialSeverance-RDMRP1-JP-SR.png
+- index: 2
+  image: TheStrangeSpecterofCelestialSeverance-RDS23P-JP-OP.png
 sets:
   ja:
   - set_number: RD/MRP1-JP092
