--- a/data/cards/23232295.yaml
+++ b/data/cards/23232295.yaml
@@ -8,7 +8,7 @@ name:
   it: Pugile Indomito Giogo di Piombo
   pt: Boxeador Obstinado de Canga
   ja: <ruby>ＢＫ<rt>バーニングナックラー</rt></ruby> <ruby>拘<rt>こう</rt></ruby><ruby>束<rt>そく</rt></ruby><ruby>蛮<rt>ばん</rt></ruby><ruby>兵<rt>ぺい</rt></ruby>リードブロー
-  ja_romaji: Bāningu Nakkurā Kōsoku Banpei Rīdoburō
+  ja_romaji: Bāningu Nakkurā Kōsokubanpei Rīdoburō
   ko: <ruby>BK<rt>버닝나쿠라</rt></ruby> 구속만병 리드블로
   ko_rr:
   zh-TW: 燃燒拳鬥士 拘束蠻兵 前導刺拳
