--- a/data/cards/00653675.yaml
+++ b/data/cards/00653675.yaml
@@ -45,22 +45,27 @@ sets:
   - set_number: DUNE-EN050
     set_name: Duelist Nexus
     rarities:
+    - Common
   de:
   - set_number: DUNE-DE050
     set_name: Duelist Nexus
     rarities:
+    - Common
   fr:
   - set_number: DUNE-FR050
     set_name: Duelist Nexus
     rarities:
+    - Common
   it:
   - set_number: DUNE-IT050
     set_name: Duelist Nexus
     rarities:
+    - Common
   pt:
   - set_number: DUNE-PT050
     set_name: Duelist Nexus
     rarities:
+    - Common
   ja:
   - set_number: DUNE-JP050
     set_name: Duelist Nexus
