--- a/data/cards/10780049.yaml
+++ b/data/cards/10780049.yaml
@@ -46,22 +46,27 @@ sets:
   - set_number: DUNE-EN075
     set_name: Duelist Nexus
     rarities:
+    - Common
   de:
   - set_number: DUNE-DE075
     set_name: Duelist Nexus
     rarities:
+    - Common
   fr:
   - set_number: DUNE-FR075
     set_name: Duelist Nexus
     rarities:
+    - Common
   it:
   - set_number: DUNE-IT075
     set_name: Duelist Nexus
     rarities:
+    - Common
   pt:
   - set_number: DUNE-PT075
     set_name: Duelist Nexus
     rarities:
+    - Common
   ja:
   - set_number: DUNE-JP075
     set_name: Duelist Nexus
