--- a/data/cards/22024279.yaml
+++ b/data/cards/22024279.yaml
@@ -45,22 +45,27 @@ sets:
   - set_number: DUNE-EN069
     set_name: Duelist Nexus
     rarities:
+    - Common
   de:
   - set_number: DUNE-DE069
     set_name: Duelist Nexus
     rarities:
+    - Common
   fr:
   - set_number: DUNE-FR069
     set_name: Duelist Nexus
     rarities:
+    - Common
   it:
   - set_number: DUNE-IT069
     set_name: Duelist Nexus
     rarities:
+    - Common
   pt:
   - set_number: DUNE-PT069
     set_name: Duelist Nexus
     rarities:
+    - Common
   ja:
   - set_number: DUNE-JP069
     set_name: Duelist Nexus
