--- a/data/cards/63436931.yaml
+++ b/data/cards/63436931.yaml
@@ -61,6 +61,8 @@ sets:
   - set_number: DUNE-EN038
     set_name: Duelist Nexus
     rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   de:
   - set_number: DUNE-DESP1
     set_name: Duelist Nexus Premiere! promotional card
@@ -69,6 +71,8 @@ sets:
   - set_number: DUNE-DE038
     set_name: Duelist Nexus
     rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   fr:
   - set_number: DUNE-FRSP1
     set_name: Duelist Nexus Premiere! promotional card
@@ -77,6 +81,8 @@ sets:
   - set_number: DUNE-FR038
     set_name: Duelist Nexus
     rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   it:
   - set_number: DUNE-ITSP1
     set_name: Duelist Nexus Premiere! promotional card
@@ -85,6 +91,8 @@ sets:
   - set_number: DUNE-IT038
     set_name: Duelist Nexus
     rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   pt:
   - set_number: DUNE-PTSP1
     set_name: Duelist Nexus Premiere! promotional card
@@ -93,6 +101,8 @@ sets:
   - set_number: DUNE-PT038
     set_name: Duelist Nexus
     rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: DUNE-JP038
     set_name: Duelist Nexus
