--- a/data/cards/85520170.yaml
+++ b/data/cards/85520170.yaml
@@ -44,22 +44,27 @@ sets:
   - set_number: DUNE-EN068
     set_name: Duelist Nexus
     rarities:
+    - Common
   de:
   - set_number: DUNE-DE068
     set_name: Duelist Nexus
     rarities:
+    - Common
   fr:
   - set_number: DUNE-FR068
     set_name: Duelist Nexus
     rarities:
+    - Common
   it:
   - set_number: DUNE-IT068
     set_name: Duelist Nexus
     rarities:
+    - Common
   pt:
   - set_number: DUNE-PT068
     set_name: Duelist Nexus
     rarities:
+    - Common
   ja:
   - set_number: DUNE-JP068
     set_name: Duelist Nexus
