--- a/data/cards/92565383.yaml
+++ b/data/cards/92565383.yaml
@@ -49,22 +49,27 @@ sets:
   - set_number: DUNE-EN005
     set_name: Duelist Nexus
     rarities:
+    - Common
   de:
   - set_number: DUNE-DE005
     set_name: Duelist Nexus
     rarities:
+    - Common
   fr:
   - set_number: DUNE-FR005
     set_name: Duelist Nexus
     rarities:
+    - Common
   it:
   - set_number: DUNE-IT005
     set_name: Duelist Nexus
     rarities:
+    - Common
   pt:
   - set_number: DUNE-PT005
     set_name: Duelist Nexus
     rarities:
+    - Common
   ja:
   - set_number: DUNE-JP005
     set_name: Duelist Nexus
