--- a/data/cards/23076639.yaml
+++ b/data/cards/23076639.yaml
@@ -49,22 +49,27 @@ sets:
   - set_number: DUNE-EN003
     set_name: Duelist Nexus
     rarities:
+    - Super Rare
   de:
   - set_number: DUNE-DE003
     set_name: Duelist Nexus
     rarities:
+    - Super Rare
   fr:
   - set_number: DUNE-FR003
     set_name: Duelist Nexus
     rarities:
+    - Super Rare
   it:
   - set_number: DUNE-IT003
     set_name: Duelist Nexus
     rarities:
+    - Super Rare
   pt:
   - set_number: DUNE-PT003
     set_name: Duelist Nexus
     rarities:
+    - Super Rare
   ja:
   - set_number: DUNE-JP003
     set_name: Duelist Nexus
