--- a/data/cards/38264974.yaml
+++ b/data/cards/38264974.yaml
@@ -59,22 +59,27 @@ sets:
   - set_number: DUNE-EN034
     set_name: Duelist Nexus
     rarities:
+    - Super Rare
   de:
   - set_number: DUNE-DE034
     set_name: Duelist Nexus
     rarities:
+    - Super Rare
   fr:
   - set_number: DUNE-FR034
     set_name: Duelist Nexus
     rarities:
+    - Super Rare
   it:
   - set_number: DUNE-IT034
     set_name: Duelist Nexus
     rarities:
+    - Super Rare
   pt:
   - set_number: DUNE-PT034
     set_name: Duelist Nexus
     rarities:
+    - Super Rare
   ja:
   - set_number: DUNE-JP034
     set_name: Duelist Nexus
