--- a/data/cards/40221691.yaml
+++ b/data/cards/40221691.yaml
@@ -48,26 +48,31 @@ sets:
     set_name: Duelist Nexus
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   de:
   - set_number: DUNE-DE025
     set_name: Duelist Nexus
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   fr:
   - set_number: DUNE-FR025
     set_name: Duelist Nexus
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   it:
   - set_number: DUNE-IT025
     set_name: Duelist Nexus
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   pt:
   - set_number: DUNE-PT025
     set_name: Duelist Nexus
     rarities:
     - Secret Rare
+    - Quarter Century Secret Rare
   ja:
   - set_number: DUNE-JP025
     set_name: Duelist Nexus
