--- a/data/cards/55461744.yaml
+++ b/data/cards/55461744.yaml
@@ -49,22 +49,27 @@ sets:
   - set_number: DUNE-EN004
     set_name: Duelist Nexus
     rarities:
+    - Super Rare
   de:
   - set_number: DUNE-DE004
     set_name: Duelist Nexus
     rarities:
+    - Super Rare
   fr:
   - set_number: DUNE-FR004
     set_name: Duelist Nexus
     rarities:
+    - Super Rare
   it:
   - set_number: DUNE-IT004
     set_name: Duelist Nexus
     rarities:
+    - Super Rare
   pt:
   - set_number: DUNE-PT004
     set_name: Duelist Nexus
     rarities:
+    - Super Rare
   ja:
   - set_number: DUNE-JP004
     set_name: Duelist Nexus
