--- a/data/cards/91262474.yaml
+++ b/data/cards/91262474.yaml
@@ -49,22 +49,27 @@ sets:
   - set_number: DUNE-EN094
     set_name: Duelist Nexus
     rarities:
+    - Common
   de:
   - set_number: DUNE-DE094
     set_name: Duelist Nexus
     rarities:
+    - Common
   fr:
   - set_number: DUNE-FR094
     set_name: Duelist Nexus
     rarities:
+    - Common
   it:
   - set_number: DUNE-IT094
     set_name: Duelist Nexus
     rarities:
+    - Common
   pt:
   - set_number: DUNE-PT094
     set_name: Duelist Nexus
     rarities:
+    - Common
   ja:
   - set_number: VX02-JP002
     set_name: The Valuable Book EX 2 promotional cards
