--- a/data/cards/97474300.yaml
+++ b/data/cards/97474300.yaml
@@ -43,22 +43,27 @@ sets:
   - set_number: DUNE-EN062
     set_name: Duelist Nexus
     rarities:
+    - Super Rare
   de:
   - set_number: DUNE-DE062
     set_name: Duelist Nexus
     rarities:
+    - Super Rare
   fr:
   - set_number: DUNE-FR062
     set_name: Duelist Nexus
     rarities:
+    - Super Rare
   it:
   - set_number: DUNE-IT062
     set_name: Duelist Nexus
     rarities:
+    - Super Rare
   pt:
   - set_number: DUNE-PT062
     set_name: Duelist Nexus
     rarities:
+    - Super Rare
   ja:
   - set_number: DUNE-JP062
     set_name: Duelist Nexus
