--- a/data/cards/22829942.yaml
+++ b/data/cards/22829942.yaml
@@ -8,7 +8,7 @@ name:
   it: Impianto di Riciclaggio Fusione
   pt: Usina de Reciclagem de Fusão
   ja: <ruby>融<rt>ゆう</rt></ruby><ruby>合<rt>ごう</rt></ruby><ruby>再<rt>さい</rt></ruby><ruby>生<rt>せい</rt></ruby><ruby>機<rt>き</rt></ruby><ruby>構<rt>こう</rt></ruby>
-  ja_romaji: Yūgō Saisei Kikō
+  ja_romaji: Yūgō Saiseikikō
   ko: 융합재생기구
   ko_rr: Yunghapjaesaenggigu
   zh-TW:
