--- a/data/cards/50727844.yaml
+++ b/data/cards/50727844.yaml
@@ -1,5 +1,5 @@
 konami_id:
-password:
+password: 50727844
 name:
   en: Synchro Forceback
   de: Synchro-Gegenkraft
@@ -67,5 +67,3 @@ limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
 yugipedia_page_id: 993285
-fake_password:
-- 101201085
