--- a/data/cards/83094004.yaml
+++ b/data/cards/83094004.yaml
@@ -8,7 +8,7 @@ name:
   it: Aeropixtre
   pt: Trifaderóbica
   ja: エアロピ<ruby>Ξ<rt>クシー</rt></ruby>
-  ja_romaji: Earopikushī
+  ja_romaji: Earopiku-Shī
   ko: 에어로피<ruby>Ξ<rt>크시</rt></ruby>
   ko_rr: E-eoropikeusi
   zh-TW:
