--- a/data/cards/85277313.yaml
+++ b/data/cards/85277313.yaml
@@ -1,5 +1,5 @@
 konami_id:
-password:
+password: 85277313
 name:
   en: Signs of the Tistina
   de: Zeichen der Tistina
@@ -74,5 +74,3 @@ limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
 yugipedia_page_id: 993298
-fake_password:
-- 101201092
