--- a/data/cards/35848254.yaml
+++ b/data/cards/35848254.yaml
@@ -39,7 +39,11 @@ series:
 - Photon
 images:
 - index: 1
+  image: PhotonLead-DP13-JP-C.png
+  illustration: PhotonLead-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: PhotonLead-PHSW-EN-C-1E.png
+  illustration: PhotonLead-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: PHSW-EN051
