--- a/data/cards/60283232.yaml
+++ b/data/cards/60283232.yaml
@@ -44,7 +44,7 @@ series:
 - Synchron
 images:
 - index: 1
-  image: WheelSynchron-DUNE-JP-C.png
+  image: WheelSynchron-DUNE-EN-C-1E.png
 sets:
   en:
   - set_number: DUNE-EN001
