--- a/data/cards/27015862.yaml
+++ b/data/cards/27015862.yaml
@@ -43,7 +43,7 @@ series:
 - Veda
 images:
 - index: 1
-  image: VedaKalanta-DUNE-JP-R.png
+  image: VedaKalanta-DUNE-EN-C-1E.png
 sets:
   en:
   - set_number: DUNE-EN012
