--- a/data/cards/31755044.yaml
+++ b/data/cards/31755044.yaml
@@ -71,6 +71,10 @@ sets:
     set_name: Raging Tempest
     rarities:
     - Super Rare
+  - set_number: OP05-DE002
+    set_name: OTS Tournament Pack 5
+    rarities:
+    - Ultimate Rare
   - set_number: MP17-DE183
     set_name: 2017 Mega-Tin Mega Pack
     rarities:
@@ -80,6 +84,10 @@ sets:
     set_name: Raging Tempest
     rarities:
     - Super Rare
+  - set_number: OP05-FR002
+    set_name: OTS Tournament Pack 5
+    rarities:
+    - Ultimate Rare
   - set_number: MP17-FR183
     set_name: 2017 Mega-Tin Mega Pack
     rarities:
@@ -89,6 +97,10 @@ sets:
     set_name: Raging Tempest
     rarities:
     - Super Rare
+  - set_number: OP05-IT002
+    set_name: OTS Tournament Pack 5
+    rarities:
+    - Ultimate Rare
   - set_number: MP17-IT183
     set_name: 2017 Mega-Tin Mega Pack
     rarities:
@@ -98,6 +110,10 @@ sets:
     set_name: Raging Tempest
     rarities:
     - Super Rare
+  - set_number: OP05-PT002
+    set_name: OTS Tournament Pack 5
+    rarities:
+    - Ultimate Rare
   - set_number: MP17-PT183
     set_name: 2017 Mega-Tin Mega Pack
     rarities:
