--- a/data/rush/yugipedia997292.yaml
+++ b/data/rush/yugipedia997292.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地にモンスター（昆虫族）が３体以上いる場合、デッキの一番上のカードを墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドの表側表示モンスター（レベル８以下／昆虫族）１体を選ぶ。このターン、そのモンスターの攻撃力は２００アップし、モンスターに２回攻撃できる。
   ko:
   zh-TW:
   zh-CN:
