--- a/data/cards/89521713.yaml
+++ b/data/cards/89521713.yaml
@@ -72,7 +72,7 @@ sets:
     rarities:
     - Common
   ko:
-  - set_number: ABYR-JP025
+  - set_number: ABYR-KR025
     set_name: Abyss Rising
     rarities:
     - Common
