--- a/data/rush/18602.yaml
+++ b/data/rush/18602.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Reveal 1 Warrior Type monster in your hand:
+    Reveal 1 Warrior Type monster in your hand.
   de:
   es:
   fr:
