--- a/rush.yaml
+++ b/rush.yaml
@@ -32598,6 +32598,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Greed
 legend: true
 images:
 - index: 1
@@ -71595,6 +71597,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Greed
 legend: true
 images:
 - index: 1
@@ -92618,7 +92622,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Reveal 1 Warrior Type monster in your hand:
+    Reveal 1 Warrior Type monster in your hand.
   de:
   es:
   fr:
@@ -92689,7 +92693,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Reveal 1 Warrior Type monster in your hand:
+    Reveal 1 Warrior Type monster in your hand.
   de:
   es:
   fr:
@@ -104937,8 +104941,8 @@ effect:
 card_type: Spell
 property: Normal
 series:
-- High Tech Dragon
 - Fusion
+- High Tech Dragon
 images:
 - index: 1
   image: DragonsBurstFusion-RDKP13-JP-C.png
@@ -104998,8 +105002,8 @@ effect:
 card_type: Spell
 property: Normal
 series:
-- High Tech Dragon
 - Fusion
+- High Tech Dragon
 images:
 - index: 1
   image: DragonsBoostFusion-RDKP13-JP-C.png
