--- a/data/cards/98045062.yaml
+++ b/data/cards/98045062.yaml
@@ -157,6 +157,10 @@ sets:
     set_name: Wild Survivors
     rarities:
     - Rare
+  - set_number: OP23-EN0??
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Ultimate Rare
   - set_number: KC01-EN049
     set_name: 25th Anniversary Ultimate Kaiba Set
     rarities:
@@ -270,6 +274,10 @@ sets:
     set_name: Wild Survivors
     rarities:
     - Rare
+  - set_number: OP23-DE0??
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Ultimate Rare
   fr:
   - set_number: AST-FR037
     set_name: Ancient Sanctuary
@@ -371,6 +379,10 @@ sets:
     set_name: Wild Survivors
     rarities:
     - Rare
+  - set_number: OP23-FR0??
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Ultimate Rare
   it:
   - set_number: AST-IT037
     set_name: Ancient Sanctuary
@@ -472,6 +484,10 @@ sets:
     set_name: Wild Survivors
     rarities:
     - Rare
+  - set_number: OP23-IT0??
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Ultimate Rare
   pt:
   - set_number: AST-PT037
     set_name: Ancient Sanctuary
@@ -532,6 +548,10 @@ sets:
     set_name: Wild Survivors
     rarities:
     - Rare
+  - set_number: OP23-PT0??
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Ultimate Rare
   ja:
   - set_number: 308-037
     set_name: The Sanctuary in the Sky (set)
