--- a/data/rush/yugipedia978511.yaml
+++ b/data/rush/yugipedia978511.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手が効果モンスターを表側表示で召喚・特殊召喚した時に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    そのモンスターの攻撃力以下の自分の墓地のモンスター１体を選び、自分フィールドに表側攻撃表示で特殊召喚する。その後、相手フィールドの表側表示モンスターを２体まで選んでその攻撃力をターン終了時まで１８００ダウンできる。
   ko:
   zh-TW:
   zh-CN:
