--- a/data/cards/89631139.yaml
+++ b/data/cards/89631139.yaml
@@ -1250,6 +1250,10 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  - set_number: PSEC-SC001
+    set_name: Prismatic Secret Rare "Blue-Eyes White Dragon" GET Campaign
+    rarities:
+    - Prismatic Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
