--- a/rush.yaml
+++ b/rush.yaml
@@ -109268,7 +109268,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -109280,7 +109281,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドのモンスター１体を選んで墓地へ送る。その後、自分の墓地のマキシマムモンスター（地属性／機械族）１体を選んで手札に加える事ができる。加えた場合、さらにコイントスを２回行う。その内２回とも表だった場合、自分は１枚ドローする。
   ko:
   zh-TW:
   zh-CN:
