--- a/data/cards/28168762.yaml
+++ b/data/cards/28168762.yaml
@@ -8,7 +8,7 @@ name:
   it: Solarvite Gardna
   pt: Gardna de Solarvinhas
   ja: <ruby>聖蔓の守護者<rt>サンヴァイン・ガードナー</rt></ruby>
-  ja_romaji: San Vain Gādonā
+  ja_romaji: Sanvain Gādonā
   ko: 생바인 가드너
   ko_rr: Saengbain Gadeuneo
   zh-TW:
