--- a/data/cards/29479265.yaml
+++ b/data/cards/29479265.yaml
@@ -21,13 +21,13 @@ text:
     2+ Monster, darunter ein Linkmonster
     Falls eine oder mehr Karten auf dem Spielfeld durch einen Karteneffekt zerstört werden, außer durch „Losgekettete Scheußlichkeit“ (außer während des Damage Steps): Du kannst 1 Karte auf dem Spielfeld wählen; zerstöre sie. Wenn ein anderes Monster durch Kampf zerstört wird: Du kannst 1 Karte auf dem Spielfeld wählen; zerstöre sie. Während der End Phase: Du kannst 1 Karte auf dem Spielfeld wählen; zerstöre sie. Du kannst jeden Effekt von „Losgekettete Scheußlichkeit“ nur einmal pro Spielzug verwenden.
   es: |-
-    2+ monstruos incluyendo un Monstruo de Enlace
-    Si una o más cartas en el Campo son destruidas por un efecto de carta, excepto por "Abominación Desencadenada" (excepto durante el Damage Step): puedes seleccionar 1 carta en el Campo; destrúyela. Cuando otro monstruo es destruido en batalla: puedes seleccionar 1 carta en el Campo; destrúyela. Durante la End Phase: puedes seleccionar 1 carta en el Campo; destrúyela. Sólo puedes usar cada efecto de "Abominación Desencadenada" una vez por turno.
+    2+ monstruos, incluyendo un Monstruo de Enlace
+    Si una o más cartas en el Campo son destruidas por el efecto de una carta, excepto por "Abominación Desencadenada" (excepto durante el Damage Step): puedes seleccionar 1 carta en el Campo; destrúyela. Cuando otro monstruo es destruido en batalla: puedes seleccionar 1 carta en el Campo; destrúyela. Durante la End Phase: puedes seleccionar 1 carta en el Campo; destrúyela. Sólo puedes usar cada efecto de "Abominación Desencadenada" una vez por turno.
   fr: |-
     2+ monstres (un Monstre Lien inclus)
     Si une ou plusieurs cartes sur le Terrain sont détruites par un effet de carte ("Abomination Désenchaînée" exclu) (sauf durant la Damage Step) : vous pouvez cibler 1 carte sur le Terrain ; détruisez-la. Lorsqu'un autre monstre est détruit au combat : vous pouvez cibler 1 carte sur le Terrain ; détruisez-la. Durant la End Phase : vous pouvez cibler 1 carte sur le Terrain ; détruisez-la. Vous ne pouvez utiliser chaque effet de "Abomination Désenchaînée" qu'une fois par tour.
   it: |-
-    2+ mostri compreso un Mostro Link
+    2+ mostri, compreso un Mostro Link
     Se una o più carte sul Terreno vengono distrutte dall'effetto di una carta, eccetto da "Abominio Svincolato" (eccetto durante il Damage Step): puoi scegliere come bersaglio 1 carta sul Terreno; distruggila. Quando un altro mostro viene distrutto in battaglia: puoi scegliere come bersaglio 1 carta sul Terreno; distruggila. Durante la End Phase: puoi scegliere come bersaglio 1 carta sul Terreno; distruggila. Puoi utilizzare ogni effetto di "Abominio Svincolato" una sola volta per turno.
   pt: |-
     2+ monstros, incluindo um Monstro Link
