--- a/data/cards/44362883.yaml
+++ b/data/cards/44362883.yaml
@@ -25,7 +25,7 @@ text:
   it: |-
     Evoca tramite Fusione 1 Mostro Fusione che menziona "Caduto di Albaz" come materiale dal tuo Extra Deck, utilizzando 2 mostri dalla tua mano, Deck o Terreno come Materiale da Fusione. Non puoi Evocare Specialmente mostri dall'Extra Deck, eccetto Mostri Fusione, nel turno in cui attivi questa carta. Puoi attivare solo 1 "Fusione Marchiata" per turno.
   pt: |-
-    Invoque por Invocação-Fusão 1 Monstro de Fusão que mencione "Caído de Arbaz" como matéria do seu Deck Adicional, usando 2 monstros da sua mão, do Deck ou do campo como Matéria de Fusão. Você não pode Invocar monstros por Invocação-Especial do Deck Adicional, exceto Monstros de Fusão, no turno em que ativar este card. Você só pode ativar 1 "Fusão do Marcado" por turno.
+    Invoque por Invocação-Fusão do seu Deck Adicional 1 Monstro de Fusão que mencione "Caído de Arbaz" como matéria, usando 2 monstros da sua mão, do Deck ou do campo como Matéria de Fusão. Você não pode Invocar monstros por Invocação-Especial do Deck Adicional, exceto Monstros de Fusão, no turno em que ativar este card. Você só pode ativar 1 "Fusão do Marcado" por turno.
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できず、このカードを発動するターン、自分は融合モンスターしかＥＸデッキから特殊召喚できない。①：自分の手札・デッキ・フィールドから、融合モンスターカードによって決められた融合素材モンスター２体を墓地へ送り、「アルバスの落胤」を融合素材とするその融合モンスター１体をＥＸデッキから融合召喚する。
   ko: |-
