--- a/data/cards/44478599.yaml
+++ b/data/cards/44478599.yaml
@@ -8,7 +8,7 @@ name:
   it: Solaravalon Melias
   pt: Melias de Solaravalon
   ja: <ruby>聖天樹の灰樹精<rt>サンアバロン・メリアス</rt></ruby>
-  ja_romaji: San Abaron Meriasu
+  ja_romaji: San'abaron Meriasu
   ko: 생아발론 멜리아스
   ko_rr: Saeng-aballon Melliaseu
   zh-TW:
