--- a/data/cards/53618293.yaml
+++ b/data/cards/53618293.yaml
@@ -8,7 +8,7 @@ name:
   it: Solarvite Fanciulla
   pt: Donzela de Solarvinhas
   ja: <ruby>聖蔓の乙女<rt>サンヴァイン・メイデン</rt></ruby>
-  ja_romaji: San Vain Meiden
+  ja_romaji: Sanvain Meiden
   ko: 생바인 메이든
   ko_rr: Saengbain Meideun
   zh-TW:
