--- a/data/cards/54340229.yaml
+++ b/data/cards/54340229.yaml
@@ -8,7 +8,7 @@ name:
   it: Solaravalon Fioritura
   pt: Florescer de Solarvalon
   ja: <ruby>聖天樹の開花<rt>サンアバロン・ブルーミング</rt></ruby>
-  ja_romaji: San Abaron Burūmingu
+  ja_romaji: San'abaron Burūmingu
   ko: 생아발론 블루밍
   ko_rr: Saeng-aballon Beulluming
   zh-TW:
