--- a/data/cards/57624336.yaml
+++ b/data/cards/57624336.yaml
@@ -25,7 +25,7 @@ text:
   it: |-
     Puoi offrire come Tributo questa carta, poi scegliere come bersaglio 1 mostro sul Terreno; distruggilo. Puoi utilizzare questo effetto di "Arcidemone Eccentrucco" una sola volta per turno.
   pt: |-
-    Você pode oferecer este card como Tributo e, depois, escolher 1 monstro no campo; destrua-o. Você só pode usar este efeito de "Arquidemônio Excêntruque" uma vez por turno.
+    Você pode oferecer este card como Tributo e, depois, escolha 1 monstro no campo; destrua-o. Você só pode usar este efeito de "Arquidemônio Excêntruque" uma vez por turno.
   ja: |-
     このカード名のモンスター効果は１ターンに１度しか使用できない。①：このカードをリリースし、フィールドのモンスター１体を対象として発動できる。そのモンスターを破壊する。
   ko: |-
@@ -44,15 +44,15 @@ pendulum_effect:
   en: |-
     You can target 1 other Spell/Trap on the field; destroy both it and this card. You can only use this effect of "Archfiend Eccentrick" once per turn.
   de: |-
-    Du kannst 1 andere Zauber-/Fallenkarte auf dem Spielfeld wählen; zerstöre sowohl sie als auch diese Karte. Du kannst diesen Effekt von „Erzunterweltler Exzentrick“ nur einmal pro Spielzug verwenden.
+    Du kannst 1 andere/n Zauber/Falle auf dem Spielfeld wählen; zerstöre sowohl ihn oder sie als auch diese Karte. Du kannst diesen Effekt von „Erzunterweltler Exzentrick“ nur einmal pro Spielzug verwenden.
   es: |-
-    Puedes seleccionar otra Carta Mágica/de Trampa en el Campo; destrúyela, así como a esta carta. Sólo puedes usar este efecto de "Archidemonio Excéntruca" una vez por turno.
+    Puedes seleccionar otra Mágica/Trampa en el Campo; destrúyela, así como a esta carta. Sólo puedes usar este efecto de "Archidemonio Excéntruca" una vez por turno.
   fr: |-
-    Vous pouvez cibler 1 autre Carte Magie/Piège sur le Terrain ; détruisez-la ainsi que cette carte. Vous ne pouvez utiliser cet effet de "Eccentrick Archdémon" qu'une fois par tour.
+    Vous pouvez cibler 1 autre Magie/Piège sur le Terrain ; détruisez-le ainsi que cette carte. Vous ne pouvez utiliser cet effet de "Eccentrick Archdémon" qu'une fois par tour.
   it: |-
-    Puoi scegliere come bersaglio 1 altra Carta Magia/Trappola sul Terreno; distruggi sia quella carta che questa carta. Puoi utilizzare questo effetto di "Arcidemone Eccentrucco" una sola volta per turno.
+    Puoi scegliere come bersaglio 1 altra Magia/Trappola sul Terreno; distruggi sia essa che questa carta. Puoi utilizzare questo effetto di "Arcidemone Eccentrucco" una sola volta per turno.
   pt: |-
-    Você pode escolher 1 outro Card de Magia/Armadilha no campo; destrua tanto ele como este card. Você só pode usar este efeito de "Arquidemônio Excêntruque" uma vez por turno.
+    Você pode escolher 1 outra Magia/Armadilha no campo; destrua tanto ela como este card. Você só pode usar este efeito de "Arquidemônio Excêntruque" uma vez por turno.
   ja: |-
     このカード名の<ruby>Ｐ<rt>ペンデュラム</rt></ruby>効果は１ターンに１度しか使用できない。①：このカード以外のフィールドの魔法・罠カード１枚を対象として発動できる。そのカードとこのカードを破壊する。
   ko: |-
