--- a/data/cards/65563871.yaml
+++ b/data/cards/65563871.yaml
@@ -8,7 +8,7 @@ name:
   it: Solarvite Guaritore
   pt: Curandeira de Solarvinhas
   ja: <ruby>聖蔓の癒し手<rt>サンヴァイン・ヒーラー</rt></ruby>
-  ja_romaji: San Vain Hīrā
+  ja_romaji: Sanvain Hīrā
   ko: 생바인 힐러
   ko_rr: Saengbain Hilleo
   zh-TW:
