--- a/data/cards/88095331.yaml
+++ b/data/cards/88095331.yaml
@@ -17,13 +17,13 @@ text:
   en: |-
     If this card on the field is Tributed: You can Special Summon 1 "Evolsaur" monster from your Deck.
   de: |-
-    Falls diese Karte auf dem Spielfeld als Tribut angeboten wird: Du kannst 1 "Evolsaurier"-Monster als Spezialbeschwörung von deinem Deck beschwören.
+    Falls diese Karte auf dem Spielfeld als Tribut angeboten wird: Du kannst 1 „Evolsaurier“-Monster als Spezialbeschwörung von deinem Deck beschwören.
   es: |-
     Si esta carta en el Campo es Sacrificada: puedes Invocar de Modo Especial, desde tu Deck, 1 monstruo "Evolusaurio".
   fr: |-
     Si cette carte sur le Terrain est Sacrifiée : vous pouvez Invoquer Spécialement 1 monstre "Évolsaure" depuis votre Deck.
   it: |-
-    Se questa carta sul terreno viene Offerta come Tributo: puoi Evocare Specialmente 1 mostro "Evolsauro" dal tuo Deck.
+    Se questa carta sul Terreno viene offerta come Tributo: puoi Evocare Specialmente 1 mostro "Evolsauro" dal tuo Deck.
   pt: |-
     Se este card no campo for oferecido como Tributo: você pode Invocar por Invocação-Especial 1 monstro "Evolssauro" do seu Deck.
   ja: |-
