--- a/data/cards/91557476.yaml
+++ b/data/cards/91557476.yaml
@@ -8,7 +8,7 @@ name:
   it: Solarvite Distruttrice
   pt: Agressor de Solarvinhas
   ja: <ruby>聖蔓の剣士<rt>サンヴァイン・スラッシャー</rt></ruby>
-  ja_romaji: San Vain Surasshā
+  ja_romaji: Sanvain Surasshā
   ko: 생바인 스래셔
   ko_rr: Saengbain Seuraesyeo
   zh-TW:
