--- a/data/cards/93896655.yaml
+++ b/data/cards/93896655.yaml
@@ -8,7 +8,7 @@ name:
   it: Solaravalon Dryas
   pt: Dria de Solaravalon
   ja: <ruby>聖天樹の幼精<rt>サンアバロン・ドリュアス</rt></ruby>
-  ja_romaji: San Abaron Doryuasu
+  ja_romaji: San'abaron Doryuasu
   ko: 생아발론 드리아스
   ko_rr: Saeng-aballon Deuriaseu
   zh-TW:
