--- a/data/cards/94016752.yaml
+++ b/data/cards/94016752.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     Pay 1500 LP and declare 1 Monster Type and 1 Attribute; your opponent must send 1 face-up monster with the declared Type and Attribute from their field to the GY, if possible. For the rest of this turn, your opponent cannot activate the effects of monsters with that sent monster's name. You can only activate 1 "Herald of the Abyss" per turn.
   de: |-
-    Zahle 1500 LP und deklariere 1 Monstertyp und 1 Eigenschaft; dein Gegner muss 1 offenes Monster mit dem deklarierten Typ und der deklarierten Eigenschaft von seiner Spielfeldseite auf den Friedhof legen, falls möglich. Für den Rest dieses Spielzugs kann dein Gegner die Effekte von Monstern mit dem Namen des gelegten Monsters nicht aktivieren. Du kannst nur 1 „Herold des Abgrunds“ pro Spielzug aktivieren.
+    Zahle 1500 LP und deklariere 1 Monstertyp und 1 Eigenschaft; dein Gegner muss 1 offenes Monster mit dem deklarierten Typ und der deklarierten Eigenschaft von seiner Spielfeldseite auf den Friedhof legen, falls möglich. Für den Rest dieses Spielzugs kann dein Gegner die Effekte von Monstern mit dem Namen jenes gelegten Monsters nicht aktivieren. Du kannst nur 1 „Herold des Abgrunds“ pro Spielzug aktivieren.
   es: |-
     Paga 1500 LP y declara 1 Tipo de Monstruo y 1 Atributo; tu adversario debe mandar al Cementerio 1 monstruo boca arriba con el Tipo y Atributo declarados en su Campo, si es posible. Por el resto de este turno, tu adversario no puede activar los efectos de monstruos con el nombre de ese monstruo mandado. Sólo puedes activar 1 "Heraldo del Abismo" por turno.
   fr: |-
