--- a/data/cards/05338223.yaml
+++ b/data/cards/05338223.yaml
@@ -17,13 +17,13 @@ text:
   en: |-
     Tribute 1 "Evoltile" monster; Special Summon 1 "Evolsaur" monster from your Deck. (This is treated as a Special Summon by the effect of an "Evoltile" monster.)
   de: |-
-    Biete 1 "Evoltil"-Monster als Tribut an; beschwöre 1 "Evolsaurier"-Monster als Spezialbeschwörung von deinem Deck. Es wird behandelt, als ob es durch den Effekt eines "Evoltil"Monsters als Spezialbeschwörung beschworen wurde.
+    Biete 1 „Evoltil“-Monster als Tribut an; beschwöre 1 „Evolsaurier“-Monster als Spezialbeschwörung von deinem Deck. (Dies wird als Spezialbeschwörung durch den Effekt eines „Evoltil“-Monsters behandelt.)
   es: |-
-    Sacrifica 1 monstruo "Evolutil"; Invoca de Modo Especial, desde tu Deck, 1 monstruo "Evolusaurio". Se trata como si hubiera sido Invocado de Modo Especial por el efecto de un monstruo "Evolutil".
+    Sacrifica 1 monstruo "Evolutil"; Invoca de Modo Especial, desde tu Deck, 1 monstruo "Evolusaurio". (Esto se trata como una Invocación Especial por efecto de un monstruo "Evolutil").
   fr: |-
-    Sacrifiez 1 monstre "Évoltile" ; Invoquez Spécialement 1 monstre "Évolsaure" depuis votre Deck. Il est traité comme Invoqué Spécialement par l'effet d'un monstre "Évoltile".
+    Sacrifiez 1 monstre "Évoltile" ; Invoquez Spécialement 1 monstre "Évolsaure" depuis votre Deck. (Ceci est traité comme une Invocation Spéciale par l'effet d'un monstre "Évoltile".)
   it: |-
-    Offri come Tributo 1 mostro "Evoltile"; Evoca Specialmente 1 mostr "Evolsauro" dal tuo Deck. Esso viene considerato come se fosse stato Evocato Specialmente dall'effetto di un mostro "Evoltile".
+    Offri come Tributo 1 mostro "Evoltile"; Evoca Specialmente 1 mostro "Evolsauro" dal tuo Deck. (Questa viene considerata come un'Evocazione Speciale dall'effetto di un mostro "Evoltile".)
   pt: |-
     Ofereça como Tributo 1 monstro "Evoltil"; Invoque por Invocação-Especial 1 monstro "Evolssauro" do seu Deck. (Isso é considerado como uma Invocação-Especial pelo efeito de um monstro "Evoltil".)
   ja: |-
