--- a/data/cards/27946124.yaml
+++ b/data/cards/27946124.yaml
@@ -8,7 +8,7 @@ name:
   it: Solarvite Santuario
   pt: Santuário de Solarvinhas
   ja: <ruby>聖蔓の社<rt>サンヴァイン・シュライン</rt></ruby>
-  ja_romaji: San Vain Shurain
+  ja_romaji: Sanvain Shurain
   ko: 생바인 슈라인
   ko_rr: Saengbain Syurain
   zh-TW:
