--- a/data/cards/35537860.yaml
+++ b/data/cards/35537860.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     If you control a Synchro Monster: Target 1 monster your opponent controls; destroy that target.
   de: |-
-    Falls du ein Synchromonster kontrollierst: Wähle 1 Monster, das dein Gegner kontrolliert; zerstöre das gewählte Ziel.
+    Falls du ein Synchromonster kontrollierst: Wähle 1 Monster, das dein Gegner kontrolliert; zerstöre jenes gewählte Ziel.
   es: |-
     Si controlas un Monstruo de Sincronía: selecciona 1 monstruo que controle tu adversario; destruye ese objetivo.
   fr: |-
