--- a/data/cards/55749927.yaml
+++ b/data/cards/55749927.yaml
@@ -27,7 +27,7 @@ text:
   es: |-
     Activa 1 de estos efectos;
     ● Destierra 1 Mágica de Equipo que controles o esté en tu Cementerio, y después puedes destruir 1 carta en el Campo.
-    ● Destruye 1 monstruo "Roland" que controles, y después Invoca de Modo Especial, desde tu Deck, hasta 3 monstruos Guerrero de FUEGO en Posición de Defensa cuyos Niveles totales sean 9, pero sus efectos son negados, y además, hasta el final de tu próximo turno después de que se resuelva este efecto, no puedes Invocar monstruos de Modo Especial, excepto monstruos Guerrero.
+    ● Destruye 1 monstruo "Roland" que controles, y después Invoca de Modo Especial, desde tu Deck, hasta 3 monstruos Guerrero de FUEGO en Posición de Defensa cuyos Niveles totales sean iguales a 9, pero sus efectos son negados y además, hasta el final de tu próximo turno después de que se resuelva este efecto, no puedes Invocar monstruos de Modo Especial, excepto monstruos Guerrero.
     Sólo puedes activar 1 "Cuerno de Olifante" por turno.
   fr: |-
     Activez 1 de ces effets ;
@@ -37,7 +37,7 @@ text:
   it: |-
     Attiva 1 di questi effetti;
     ● Bandisci 1 Magia Equipaggiamento che controlli o che è nel tuo Cimitero, poi puoi distruggere 1 carta sul Terreno.
-    ● Distruggi 1 mostro "Roland" che controlli, poi Evoca Specialmente in Posizione di Difesa dal tuo Deck fino a 3 mostri FUOCO Guerriero con somma dei Livelli pari a 9, ma i loro effetti sono annullati, inoltre, fino alla fine del tuo prossimo turno dopo che questo effetto si è risolto, non puoi Evocare Specialmente mostri, eccetto mostri Guerriero.
+    ● Distruggi 1 mostro "Roland" che controlli, poi Evoca Specialmente in Posizione di Difesa dal tuo Deck fino a 3 mostri FUOCO Guerriero con Livello totale pari a 9, ma i loro effetti sono annullati, inoltre, fino alla fine del tuo prossimo turno dopo che questo effetto si è risolto, non puoi Evocare Specialmente mostri, eccetto mostri Guerriero.
     Puoi attivare solo 1 "Corno di Olifante" per turno.
   pt: |-
     Ative 1 desses efeitos;
