--- a/data/cards/57108202.yaml
+++ b/data/cards/57108202.yaml
@@ -18,17 +18,17 @@ text:
     ● Attack Position: Once per turn: You can target 1 "Morphtronic" monster in your GY; banish that target, and if you do, add 1 "Morphtronic" monster with the same Level as the target from your Deck to your hand.
     ● Defense Position: Once per turn: You can send 1 "Morphtronic" monster from your hand to the GY, and if you do, add 1 other "Morphtronic" monster with the same Level as that monster from your GY to your hand.
   de: |-
-    ● Einmal pro Spielzug, solange in Angriffsposition: Du kannst 1 "Morphtronisch"-Monster in deinem Friedhof wählen; verbanne das gewählte Ziel und füge deiner Hand 1 "Morphtronisch"-Monster, das dieselbe Stufe wie das gewählte Ziel hat, von deinem Deck hinzu.
-    ● Einmal pro Spielzug, solange in Verteidigungsposition: Du kannst 1 "Morphtronisch"-Monster von deiner Hand auf den Friedhof legen und deiner Hand 1 anderes "Morphtronisch"-Monster, das dieselbe Stufe wie das Monster hat, von deinem Friedhof hinzufügen.
+    ● Angriffsposition: Einmal pro Spielzug: Du kannst 1 „Morphtronisch“-Monster in deinem Friedhof wählen; verbanne jenes gewählte Ziel und falls du dies tust, füge deiner Hand 1 „Morphtronisch“-Monster mit derselben Stufe wie das gewählte Ziel von deinem Deck hinzu.
+    ● Verteidigungsposition: Einmal pro Spielzug: Du kannst 1 „Morphtronisch“-Monster von deiner Hand auf den Friedhof legen und falls du dies tust, füge deiner Hand 1 anderes „Morphtronisch“-Monster mit derselben Stufe wie jenes Monster von deinem Friedhof hinzu.
   es: |-
-    ●En Posición de Ataque: Una vez por turno puedes retirar del juego un monstruo "Morfotrónico/a" en tu Cementerio y añadir a tu mano, desde tu Deck, 1 monstruo "Morfotrónico/a" del mismo Nivel que ese monstruo.
-    ●En Posición de Defensa: Una vez por turno puedes mandar 1 monstruo "Morfotrónico/a" desde tu mano al Cementerio y añadir a tu mano, desde tu Cementerio, 1 monstruo "Morfotrónico/a" del mismo Nivel que ese monstruo.
+    ● Posición de Ataque: Una vez por turno: puedes seleccionar 1 monstruo "Morfotrónico/a" en tu Cementerio; destierra ese objetivo y, si lo haces, añade a tu mano, desde tu Deck, 1 monstruo "Morfotrónico/a" con el mismo Nivel que el del objetivo.
+    ● Posición de Defensa: Una vez por turno: puedes mandar al Cementerio 1 monstruo "Morfotrónico/a" en tu mano y, si lo haces, añade a tu mano, desde tu Cementerio, otro monstruo "Morfotrónico/a" con el mismo Nivel que el de ese monstruo.
   fr: |-
-    ●En Position d'Attaque : Une fois par tour, vous pouvez retirer du jeu 1 monstre "Morphtronique" depuis votre Cimetière et ajouter 1 monstre "Morphtronique" avec le même Niveau que ce monstre depuis votre Deck à votre main.
-    ●En Position de Défense : Une fois par tour, vous pouvez envoyer 1 monstre "Morphtronique" depuis votre main au Cimetière et ajouter 1 monstre "Morphtronique" avec le même Niveau que ce monstre depuis votre Cimetière à votre main.
+    ● Position d'Attaque : Une fois par tour : vous pouvez cibler 1 monstre "Morphtronique" dans votre Cimetière ; bannissez la cible, et si vous le faites, ajoutez 1 monstre "Morphtronique" du même Niveau que la cible depuis votre Deck à votre main.
+    ● Position de Défense : Une fois par tour : vous pouvez envoyer 1 monstre "Morphtronique" depuis votre main au Cimetière, et si vous le faites, ajoutez 1 autre monstre "Morphtronique" du même Niveau que le monstre depuis votre Cimetière à votre main.
   it: |-
-    ● Fino a quando è in Posizione di Attacco: Una volta per turno, puoi rimuovere dal gioco 1 mostro "Morfotronico" dal tuo Cimitero e aggiungere 1 mostro "Morfotronico" con lo stesso Livello di quel mostro dal tuo Deck alla tua mano.
-    ● Fino a quando è in Posizione di Difesa: Una volta per turno, puoi mandare 1 mostro "Morfotronico" dalla tua mano al Cimitero e aggiungere 1 mostro "Morfotronico" con lo stesso Livello di quel mostro dal tuo Cimitero alla tua mano.
+    ● Posizione di Attacco: Una volta per turno: puoi scegliere come bersaglio 1 mostro "Morfotronico" nel tuo Cimitero; bandisci quel bersaglio e, se lo fai, aggiungi 1 mostro "Morfotronico" con lo stesso Livello del bersaglio dal tuo Deck alla tua mano.
+    ● Posizione di Difesa: Una volta per turno: puoi mandare 1 mostro "Morfotronico" dalla tua mano al Cimitero e, se lo fai, aggiungi 1 mostro "Morfotronico" con lo stesso Livello di quel mostro dal tuo Cimitero alla tua mano.
   pt: |-
     ● Posição de Ataque: Uma vez por turno: você pode escolher 1 monstro "Morfotrônico(a)" no seu Cemitério; bana o alvo e, se isso acontecer, adicione 1 monstro "Morfotrônico(a)" com o mesmo Nível do alvo do seu Deck à sua mão.
     ● Posição de Defesa: Uma vez por turno: você pode enviar 1 monstro "Morfotrônico(a)" da sua mão para o Cemitério e, se isso acontecer, adicione 1 outro monstro "Morfotrônico(a)" com o mesmo Nível que o desse monstro do seu Cemitério à sua mão.
