--- a/data/cards/65285459.yaml
+++ b/data/cards/65285459.yaml
@@ -8,7 +8,7 @@ name:
   it: Solaravalon Dryanome
   pt: Drianome de Solaravalon
   ja: <ruby>聖天樹の大精霊<rt>サンアバロン・ドリュアノーム</rt></ruby>
-  ja_romaji: San Abaron Doryuanōmu
+  ja_romaji: San'abaron Doryuanōmu
   ko: 생아발론 드리아노움
   ko_rr: Saeng-aballon Deurianoum
   zh-TW:
