--- a/data/cards/70473293.yaml
+++ b/data/cards/70473293.yaml
@@ -8,7 +8,7 @@ name:
   it: Solarvite Incrocio di Specie
   pt: Raça Cruzada de Solarvinhas
   ja: <ruby>聖蔓の交配<rt>サンヴァイン・クロスブリード</rt></ruby>
-  ja_romaji: San Vain Kurosu Burīdo
+  ja_romaji: Sanvain Kurosuburīdo
   ko: 생바인 크로스브리드
   ko_rr: Saengbain Keuroseubeurideu
   zh-TW:
