--- a/data/rush/18763.yaml
+++ b/data/rush/18763.yaml
@@ -44,6 +44,8 @@ attribute: LIGHT
 level: 10
 atk: 2200
 def: 0
+series:
+- Abysskite
 images:
 - index: 1
   image: ShinesteelUltraDragonDevastarOkeabyssL-RDVSP1-JP-NPR.png
