--- a/data/rush/18785.yaml
+++ b/data/rush/18785.yaml
@@ -40,6 +40,8 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
+series:
+- Abysskite
 images:
 - index: 1
   image: AbysskiteProtection-RDVSP1-JP-SR.png
