--- a/data/cards/48739166.yaml
+++ b/data/cards/48739166.yaml
@@ -235,7 +235,7 @@ sets:
   - set_number: DP26-KR000
     set_name: 'Duelist Pack: Duelists of the Abyss'
     rarities:
-    - Holographic Rare
+    - Extra Secret Rare
   zh-CN:
   - set_number: ST21-SCP02
     set_name: Starter Deck 2021 Special Pack
