--- a/data/cards/85346853.yaml
+++ b/data/cards/85346853.yaml
@@ -8,7 +8,7 @@ name:
   it: Paladino del Drago Fotonico
   pt: Paladino do Dragão de Fóton
   ja: <ruby>光子竜の聖騎士<rt>ナイト・オブ・フォトンドラゴン</rt></ruby>
-  ja_romaji: Naito obu Foton Doragon
+  ja_romaji: Naito Obu Foton Doragon
   ko: 나이트 오브 포톤 드래곤
   ko_rr:
   zh-TW:
