--- a/data/cards/31076103.yaml
+++ b/data/cards/31076103.yaml
@@ -8,7 +8,7 @@ name:
   it: Il Primo Sarcofago
   pt: O Primeiro Sarcófago
   ja: <ruby>第<rt>だい</rt></ruby><ruby>一<rt>いち</rt></ruby>の<ruby>棺<rt>ひつぎ</rt></ruby>
-  ja_romaji: Dai'ichi no Hitsugi
+  ja_romaji: Daiichi no Hitsugi
   ko: 제일의 관
   ko_rr:
   zh-TW:
