--- a/data/cards/41113025.yaml
+++ b/data/cards/41113025.yaml
@@ -8,7 +8,7 @@ name:
   it: Predone Lamadisco
   pt: Motoqueiro da Lâmina de Disco
   ja: ディスクライダー
-  ja_romaji: Disukuraidā
+  ja_romaji: Disuku Raidā
   ko: 디스크라이더
   ko_rr:
   zh-TW:
