--- a/data/cards/58981727.yaml
+++ b/data/cards/58981727.yaml
@@ -8,7 +8,7 @@ name:
   it: Yosenju Sabu
   pt: Yosenju Sabu
   ja: <ruby>妖<rt>よう</rt></ruby><ruby>仙<rt>せん</rt></ruby><ruby>獣<rt>じゅう</rt></ruby> <ruby>侍郎風<rt>サブロウカゼ</rt></ruby>
-  ja_romaji: Yōsenjū Saburōkaze
+  ja_romaji: Yōsenjū Saburoukaze
   ko: 요선수 시랑풍
   ko_rr: Yoseonsu Sirangpung
   zh-TW:
