--- a/data/rush/yugipedia1001366.yaml
+++ b/data/rush/yugipedia1001366.yaml
@@ -54,6 +54,7 @@ sets:
   - set_number: RD/KP14-JP026
     set_name: Phoenix of the Roaring Flame
     rarities:
+    - Rare
     - Secret Rare
 is_translation_unofficial:
   name:
