--- a/rush.yaml
+++ b/rush.yaml
@@ -109376,6 +109376,7 @@ sets:
   - set_number: RD/KP14-JP024
     set_name: Phoenix of the Roaring Flame
     rarities:
+    - Rare
     - Secret Rare
 is_translation_unofficial:
   name:
@@ -109440,6 +109441,7 @@ sets:
   - set_number: RD/KP14-JP025
     set_name: Phoenix of the Roaring Flame
     rarities:
+    - Rare
     - Secret Rare
 is_translation_unofficial:
   name:
@@ -109504,6 +109506,7 @@ sets:
   - set_number: RD/KP14-JP026
     set_name: Phoenix of the Roaring Flame
     rarities:
+    - Rare
     - Secret Rare
 is_translation_unofficial:
   name:
