--- a/data/cards/10300821.yaml
+++ b/data/cards/10300821.yaml
@@ -1,7 +1,7 @@
 konami_id: 18925
 password: 10300821
 name:
-  en: "Number C79: Battlin' Boxer Commander Caesar"
+  en: "Number C79: Battlin' Boxer General Kaiser"
   de:
   es:
   fr:
@@ -46,8 +46,33 @@ series:
 - Number C
 images:
 - index: 1
-  image: NumberC79BattlinBoxerCommanderCaesar-DP28-JP-UR.png
+  image: NumberC79BattlinBoxerGeneralKaiser-DP28-JP-UR.png
 sets:
+  en:
+  - set_number: LD10-EN035
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Super Rare
+  de:
+  - set_number: LD10-DE035
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Super Rare
+  fr:
+  - set_number: LD10-FR035
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Super Rare
+  it:
+  - set_number: LD10-IT035
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: LD10-PT035
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Super Rare
   ja:
   - set_number: DP28-JP035
     set_name: 'Duelist Pack: Duelists of Explosion'
@@ -57,9 +82,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 903929
