--- a/data/cards/46804536.yaml
+++ b/data/cards/46804536.yaml
@@ -16,7 +16,9 @@ name:
 text:
   en: |-
     2 Level 4 monsters
-    If this card is Special Summoned: You can take 1 Level 4 or lower FIRE Warrior monster or 1 "Battlin' Boxing" Spell/Trap from your Deck, and either add it to your hand or send it to the GY. (Quick Effect): You can detach 1 material from a monster you control, and if you do, your opponent cannot target "Battlin' Boxer" monsters you control with card effects this turn. You can only use each effect of "Battlin' Boxer King Dempsey" once per turn.
+    If this card is Special Summoned: You can take 1 Level 4 or lower FIRE Warrior monster or 1 "Battlin' Boxing" Spell/Trap from your Deck, and either add it to your hand or send it to the GY. (Quick Effect): You can detach 1 material from a monster you control, and if you do, apply the following effect.
+    ● Your opponent cannot target "Battlin' Boxer" monsters you control with card effects for the rest of this turn.
+    You can only use each effect of "Battlin' Boxer King Dempsey" once per turn.
   de:
   es:
   fr:
@@ -43,6 +45,31 @@ images:
 - index: 1
   image: BattlinBoxerKingDempsey-DP28-JP-SR.png
 sets:
+  en:
+  - set_number: LD10-EN036
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: LD10-DE036
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: LD10-FR036
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: LD10-IT036
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: LD10-PT036
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DP28-JP036
     set_name: 'Duelist Pack: Duelists of Explosion'
@@ -52,9 +79,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 903930
