--- a/data/cards/47921178.yaml
+++ b/data/cards/47921178.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: BK 首席辅导员
 text:
   en: |-
-    When an opponent's monster declares an attack and you control a FIRE and/or Warrior monster: You can Special Summon this card from your hand, and if you do, negate the attack, then banish 1 monster on the field until the End Phase. You can only use this effect of "Battlin' Boxer Chief Second" once per turn. During your Main Phase, you can Normal Summon 1 "Battlin' Boxer" monster in addition to your Normal Summon/Set. (You can only gain this effect once per turn.)
+    During your Main Phase, you can Normal Summon 1 "Battlin' Boxer" monster in addition to your Normal Summon/Set. (You can only gain this effect once per turn.) When an opponent's monster declares an attack, while you control a Warrior or FIRE monster: You can Special Summon this card from your hand, and if you do, negate that attack, then banish 1 monster on the field until the End Phase. You can only use this effect of "Battlin' Boxer Chief Second" once per turn.
   de:
   es:
   fr:
@@ -39,6 +39,31 @@ images:
 - index: 1
   image: BattlinBoxerChiefSecond-DP28-JP-R.png
 sets:
+  en:
+  - set_number: LD10-EN033
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Rare
+  de:
+  - set_number: LD10-DE033
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Rare
+  fr:
+  - set_number: LD10-FR033
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Rare
+  it:
+  - set_number: LD10-IT033
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Rare
+  pt:
+  - set_number: LD10-PT033
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Rare
   ja:
   - set_number: DP28-JP033
     set_name: 'Duelist Pack: Duelists of Explosion'
@@ -47,9 +72,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 903927
