--- a/data/cards/71544954.yaml
+++ b/data/cards/71544954.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Este card não pode ser Invocado, por Invocação-Normal, ou Baixado. Este card não pode ser Invocado, por Invocação-Especial, exceto removendo de jogo monstro(s) do Tipo Rocha no seu Cemitério. O ATK e a DEF original deste card tornam-se o número de monstro do Tipo Rocha que você removeu de jogo quando você Invocou, por Invocação-Especial, este card x 700 pontos.
   ja: |-
-    このカードは通常召喚できない。自分の墓地に存在する岩石族モンスターを除外する事でのみ特殊召喚できる。このカードの元々の攻撃力と守備力は、特殊召喚時に除外した岩石族モンスターの数✕７００ポイントの数値になる。
+    このカードは通常召喚できない。自分の墓地に存在する岩石族モンスターを除外する事でのみ特殊召喚できる。このカードの元々の攻撃力と守備力は、特殊召喚時に除外した岩石族モンスターの数×７００ポイントの数値になる。
   ko: |-
     이 카드는 일반 소환/세트할 수 없다. 자신의 묘지에 존재하는 암석족 몬스터를 제외하는 것으로만 특수 소환할 수 있다. 이 카드의 원래 공격력과 수비력은 특수 소환시에 제외한 암석족 몬스터의 수 × 700 포인트의 수치가 된다.
   zh-TW:
