--- a/data/cards/83315222.yaml
+++ b/data/cards/83315222.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: BK 赛事承办员
 text:
   en: |-
-    If your opponent controls a monster: You can Special Summon this card from your hand. You can Tribute this card; Special Summon up to 2 "Battlin' Boxer" monsters with different names from your Deck, except "Battlin' Boxer Promoter". You can banish this card from your GY; increase or decrease the Levels of all "Battlin' Boxer" monsters you currently control by 1. You can only use each effect of "Battlin' Boxer Promoter" once per turn. You cannot Special Summon monsters the turn you activate any of this card's effects, except "Battlin' Boxer" monsters.
+    If your opponent controls a monster: You can Special Summon this card from your hand. You can Tribute this card; Special Summon up to 2 "Battlin' Boxer" monsters with different names from your Deck, except "Battlin' Boxer Promoter". You can banish this card from your GY; increase or decrease the Levels of all "Battlin' Boxer" monsters you currently control by 1. You can only use each effect of "Battlin' Boxer Promoter" once per turn, also you cannot Special Summon monsters during the turn you activate any of this card's effects, except "Battlin' Boxer" monsters.
   de:
   es:
   fr:
@@ -39,6 +39,31 @@ images:
 - index: 1
   image: BattlinBoxerPromoter-DP28-JP-SR.png
 sets:
+  en:
+  - set_number: LD10-EN034
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: LD10-DE034
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: LD10-FR034
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: LD10-IT034
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: LD10-PT034
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DP28-JP034
     set_name: 'Duelist Pack: Duelists of Explosion'
@@ -48,9 +73,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 903928
