--- a/data/cards/85250352.yaml
+++ b/data/cards/85250352.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Activate this card by sending 1 "Blaze Accelerator" from your hand, Deck, or face-up field to the GY. You can only control 1 "Volcanic Blaze Accelerator". Once per turn: You can Special Summon 1 "Volcanic" monster from your hand. Once per turn: You can target 1 face-up monster your opponent controls; send 1 Level 1 Pyro monster from your Deck to the GY, and if you do, destroy the targeted monster.
+    Activate this card by sending 1 "Blaze Accelerator" from your hand, Deck, or face-up field to the GY. You can only control 1 "Volcanic Blaze Accelerator". Once per turn, during your Main Phase: You can Special Summon 1 "Volcanic" monster from your hand. Once per turn: You can target 1 face-up monster your opponent controls; send 1 Level 1 Pyro monster from your Deck to the GY, and if you do, destroy that monster.
   de:
   es:
   fr:
@@ -35,6 +35,31 @@ images:
 - index: 1
   image: VolcanicBlazeAccelerator-DP28-JP-SR.png
 sets:
+  en:
+  - set_number: LD10-EN021
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Super Rare
+  de:
+  - set_number: LD10-DE021
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Super Rare
+  fr:
+  - set_number: LD10-FR021
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Super Rare
+  it:
+  - set_number: LD10-IT021
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: LD10-PT021
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Super Rare
   ja:
   - set_number: DP28-JP021
     set_name: 'Duelist Pack: Duelists of Explosion'
@@ -44,9 +69,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 924871
