--- a/data/cards/10140443.yaml
+++ b/data/cards/10140443.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 Tuner + 1+ non-Tuner monsters
-    If this card is Synchro Summoned using "Salamangreat Burst Gryphon" as material: You can activate this effect; during the next Standby Phase, Special Summon 1 monster from your GY. You can target 1 Level 7 or lower FIRE monster in your GY; you cannot Special Summon monsters for the rest of this turn, except FIRE monsters, also Special Summon that monster, and if you do, reduce this card's Level by that monster's original Level. You can only use each effect of "Salamangreat Burst Gryphon" once per turn.
+    You can target 1 Level 7 or lower FIRE monster in your GY; Special Summon it, and if you do, reduce this card's Level by that monster's original Level, also you cannot Special Summon monsters for the rest of this turn, except FIRE monsters. If this card is Synchro Summoned using "Salamangreat Burst Gryphon" as material: You can activate this effect; during the next Standby Phase, Special Summon 1 monster from your GY. You can only use each effect of "Salamangreat Burst Gryphon" once per turn.
   de:
   es:
   fr:
@@ -43,6 +43,31 @@ images:
 - index: 1
   image: SalamangreatBurstGryphon-DP28-JP-SR.png
 sets:
+  en:
+  - set_number: LD10-EN004
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: LD10-DE004
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: LD10-FR004
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: LD10-IT004
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: LD10-PT004
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DP28-JP004
     set_name: 'Duelist Pack: Duelists of Explosion'
@@ -52,9 +77,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 934313
