--- a/data/cards/11522479.yaml
+++ b/data/cards/11522479.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     If this card is Normal or Special Summoned: You can add 1 "Battlin' Boxer" monster or 1 "Counter" Counter Trap from your Deck to your hand, except "Battlin' Boxer Uppercutter". If this card is sent to the GY by card effect: You can activate 1 of these effects;
     ● Special Summon 1 "Battlin' Boxer" monster from your GY, except "Battlin’ Boxer Uppercutter".
-    ● Set 1 "Counter" Counter Trap from your GY.
+    ● Set 1 "Counter" Counter Trap from your GY to your field.
     You can only use 1 "Battlin' Boxer Uppercutter" effect per turn, and only once that turn.
   de:
   es:
@@ -42,6 +42,31 @@ images:
 - index: 1
   image: BattlinBoxerUppercutter-DP28-JP-R.png
 sets:
+  en:
+  - set_number: LD10-EN032
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: LD10-DE032
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: LD10-FR032
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: LD10-IT032
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: LD10-PT032
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DP28-JP032
     set_name: 'Duelist Pack: Duelists of Explosion'
@@ -50,9 +75,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 903926
