--- a/data/cards/11962031.yaml
+++ b/data/cards/11962031.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 火炎之转生炎兽
 text:
   en: |-
-    If this card is Normal or Special Summoned: You can add 1 Level 4 or lower "Salamangreat" monster from your Deck to your hand, except "Salamangreat of Fire", also you cannot Special Summon monsters for the rest of this turn, except FIRE monsters. At the start of the Damage Step, when your Cyberse monster battles: You can banish this card from your GY; destroy that monster you control. You can only use each effect of "Salamangreat of Fire" once per turn.
+    If this card is Normal or Special Summoned: You can add 1 Level 4 or lower "Salamangreat" monster from your Deck to your hand, except "Salamangreat of Fire", also you cannot Special Summon monsters for the rest of this turn, except FIRE monsters. At the start of the Damage Step, if a Cyberse monster you control battles: You can banish this card from your GY; destroy that monster you control. You can only use each effect of "Salamangreat of Fire" once per turn.
   de:
   es:
   fr:
@@ -39,6 +39,31 @@ images:
 - index: 1
   image: SalamangreatofFire-DP28-JP-UR.png
 sets:
+  en:
+  - set_number: LD10-EN001
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: LD10-DE001
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: LD10-FR001
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: LD10-IT001
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: LD10-PT001
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DP28-JP001
     set_name: 'Duelist Pack: Duelists of Explosion'
@@ -48,9 +73,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 943090
