--- a/data/cards/19027895.yaml
+++ b/data/cards/19027895.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 转生炎兽的复生
 text:
   en: |-
-    Target 1 FIRE monster in your GY; Special Summon it. You can banish this card from your GY, then target 1 "Salamangreat" monster you control and 1 monster with the same name in your GY; shuffle that monster from the GY into the Deck, and if you do, that other monster you control gains ATK equal to its own original ATK until the end of this turn. You can only use each effect of "Salamangreat Revive" once per turn.
+    Target 1 FIRE monster in your GY; Special Summon it. You can banish this card from your GY, then target 1 "Salamangreat" monster you control and 1 monster in your GY with the same name; shuffle that monster from the GY into the Deck, and if you do, that monster you control gains ATK equal to its original ATK until the end of this turn. You can only use each effect of "Salamangreat Revive" once per turn.
   de:
   es:
   fr:
@@ -35,17 +35,37 @@ images:
 - index: 1
   image: SalamangreatRevive-DP28-JP-R.png
 sets:
+  en:
+  - set_number: LD10-EN007
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Rare
+  de:
+  - set_number: LD10-DE007
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Rare
+  fr:
+  - set_number: LD10-FR007
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Rare
+  it:
+  - set_number: LD10-IT007
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Rare
+  pt:
+  - set_number: LD10-PT007
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Rare
   ja:
-  - set_number: DP28-JP006
+  - set_number: DP28-JP007
     set_name: 'Duelist Pack: Duelists of Explosion'
     rarities:
     - Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 934347
