--- a/data/cards/40456412.yaml
+++ b/data/cards/40456412.yaml
@@ -15,11 +15,10 @@ name:
   zh-CN:
 text:
   en: |-
-    If you control "Supreme King Z-ARC": Activate 1 of these effects;
+    If you control "Supreme King Z-ARC": Activate 1 of these effects (but you can only use each effect of "Miracle of the Supreme King" once per turn);
     ● Destroy 1 "Supreme King Z-ARC" you control, and if you do, Special Summon 1 "Odd-Eyes" Pendulum Monster or 1 LIGHT "Supreme King Z-ARC" from your Deck or Extra Deck, ignoring its Summoning conditions.
     ● Place 1 face-up Pendulum Monster from your Extra Deck in your Pendulum Zone.
     ● Set 1 Quick-Play Spell directly from your Deck.
-    You can only use each effect of "Miracle of the Supreme King" once per turn.
   de:
   es:
   fr:
