--- a/data/cards/46412900.yaml
+++ b/data/cards/46412900.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 火山种皇帝
 text:
   en: |-
-    Cannot be Normal Summoned/Set. Must be Special Summoned (from your hand or GY) by banishing 3 Pyro monsters, OR 1 "Blaze Accelerator" card, from your face-up field and/or GY. When Summoned this way: You can inflict 500 damage to your opponent for each banished Pyro monster, then you can Set 1 "Volcanic" Trap directly from your Deck. Each time your opponent Special Summons a monster(s), inflict 500 damage to your opponent. You can only Special Summon "Volcanic Emperor"(s) once per turn.
+    Cannot be Normal Summoned/Set. Must be Special Summoned (from your hand or GY) by banishing 3 Pyro monsters or 1 "Blaze Accelerator" card from your face-up field and/or GY. You can only Special Summon "Volcanic Emperor" once per turn. When Summoned this way: You can inflict 500 damage to your opponent for each banished Pyro monster, then you can Set 1 "Volcanic" Trap directly from your Deck. Each time your opponent Special Summons a monster(s), inflict 500 damage to your opponent.
   de:
   es:
   fr:
@@ -39,6 +39,31 @@ images:
 - index: 1
   image: VolcanicEmperor-DP28-JP-UR.png
 sets:
+  en:
+  - set_number: LD10-EN018
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: LD10-DE018
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: LD10-FR018
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: LD10-IT018
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: LD10-PT018
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DP28-JP018
     set_name: 'Duelist Pack: Duelists of Explosion'
@@ -48,9 +73,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 924865
