--- a/data/cards/57357130.yaml
+++ b/data/cards/57357130.yaml
@@ -1,7 +1,7 @@
 konami_id: 18909
 password: 57357130
 name:
-  en: Salamangreat Wheesel
+  en: Salamangreat Weasel
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 转生炎兽 黄鼬
 text:
   en: |-
-    If you have 2 or more "Salamangreat" monsters in your GY: You can Special Summon this card from your hand. If a "Salamangreat" Ritual, Fusion, Synchro, Xyz, and/or Link Monster(s) is Special Summoned to your field while this card is in your GY (except during the Damage Step): You can target 1 other "Salamangreat" monster in your GY; place this card on the bottom of the Deck, and if you do, Special Summon that monster to your opponent's field, then draw 1 card. You can only use each effect of "Salamangreat Wheesel" once per turn.
+    If you have 2 or more "Salamangreat" monsters in your GY: You can Special Summon this card from your hand. If a "Salamangreat" Ritual, Fusion, Synchro, Xyz, or Link Monster(s) is Special Summoned to your field, while this card is in your GY (except during the Damage Step): You can target 1 other "Salamangreat" monster in your GY; place this card on the bottom of your Deck, and if you do, Special Summon that monster to your opponent's field, then draw 1 card. You can only use each effect of "Salamangreat Weasel" once per turn.
   de:
   es:
   fr:
@@ -37,8 +37,33 @@ series:
 - Salamangreat
 images:
 - index: 1
-  image: SalamangreatWheesel-DP28-JP-SR.png
+  image: SalamangreatWeasel-DP28-JP-SR.png
 sets:
+  en:
+  - set_number: LD10-EN002
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Super Rare
+  de:
+  - set_number: LD10-DE002
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Super Rare
+  fr:
+  - set_number: LD10-FR002
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Super Rare
+  it:
+  - set_number: LD10-IT002
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: LD10-PT002
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Super Rare
   ja:
   - set_number: DP28-JP002
     set_name: 'Duelist Pack: Duelists of Explosion'
@@ -48,9 +73,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 934343
