--- a/data/cards/58143766.yaml
+++ b/data/cards/58143766.yaml
@@ -15,10 +15,9 @@ name:
   zh-CN: 火山种散射
 text:
   en: |-
-    Activate 1 of these effects.
+    Activate 1 of these effects (but you can only use each effect of "Volcanic Emission" once per turn);
     ● Take 1 "Volcanic" monster from your Deck, and either add it to your hand or Special Summon it, ignoring its Summoning conditions, but return it to the hand during the End Phase.
-    ● Target 1 Pyro monster on the field; inflict damage to your opponent equal to its original ATK. If you targeted a monster you control, the damage inflicted by this effect is halved.
-    You can only use each effect of "Volcanic Emission" once per turn.
+    ● Target 1 Pyro monster on the field; inflict damage to your opponent equal to that monster's original ATK, or if you targeted a monster you control, the damage is halved.
   de:
   es:
   fr:
@@ -42,6 +41,31 @@ images:
 - index: 1
   image: VolcanicEmission-DP28-JP-SR.png
 sets:
+  en:
+  - set_number: LD10-EN023
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Super Rare
+  de:
+  - set_number: LD10-DE023
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Super Rare
+  fr:
+  - set_number: LD10-FR023
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Super Rare
+  it:
+  - set_number: LD10-IT023
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: LD10-PT023
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Super Rare
   ja:
   - set_number: DP28-JP023
     set_name: 'Duelist Pack: Duelists of Explosion'
@@ -51,9 +75,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 936592
