--- a/data/cards/83293635.yaml
+++ b/data/cards/83293635.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    During the Battle Phase, if a monster(s) is destroyed by battle or card effect: Target 1 "Number" Xyz Monster in your GY; Special Summon from your Extra Deck, 1 "Number C" monster with the same Type as that monster but 1 Rank higher, and if you do, attach that monster to the Summoned monster as material, then, if you Summoned a monster with "Number C101" through "Number C107" in its name, you can add 1 "Barian's" Spell/Trap, "Rank-Up-Magic" Quick-Play Spell, or "Seventh" Spell/Trap from your Deck to your hand, except "Seventh Force".
+    During the Battle Phase, if a monster(s) is destroyed by battle or card effect: Target 1 "Number" Xyz Monster in your GY; Special Summon from your Extra Deck 1 "Number C" monster with the same Type but 1 Rank higher, and if you do, attach that monster to it as material, then, if you Special Summoned a "Number C" monster with a number between "101" and "107" in its name, you can add 1 "Seventh" or "Barian's" Spell/Trap, or 1 "Rank-Up-Magic" Quick-Play Spell, except "Seventh Force", from your Deck to your hand.
   de:
   es:
   fr:
@@ -34,6 +34,31 @@ images:
 - index: 1
   image: SeventhForce-DP28-JP-UR.png
 sets:
+  en:
+  - set_number: LD10-EN037
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Super Rare
+  de:
+  - set_number: LD10-DE037
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Super Rare
+  fr:
+  - set_number: LD10-FR037
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Super Rare
+  it:
+  - set_number: LD10-IT037
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: LD10-PT037
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Super Rare
   ja:
   - set_number: DP28-JP037
     set_name: 'Duelist Pack: Duelists of Explosion'
@@ -43,9 +68,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 934371
