--- a/data/cards/84138874.yaml
+++ b/data/cards/84138874.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    When your opponent activates a monster effect on the field: You can banish 1 Pyro monster from your GY; inflict 500 damage to your opponent, then, if you banished a "Volcanic" monster, you can negate that activated effect. During your opponent's End Phase: You can target up to 2 of your "Volcanic" monsters that are banished and/or in your GY; place them on the bottom of the Deck in any order. You can only use each effect of "Volcanic Inferno" once per turn.
+    When your opponent activates a monster effect on the field: You can banish 1 Pyro monster from your GY; inflict 500 damage to your opponent, then, if you banished a "Volcanic" monster to activate this effect, you can negate that effect. During your opponent's End Phase: You can target up to 2 of your "Volcanic" monsters that are banished and/or in your GY; place them on the bottom of your Deck in any order. You can only use each effect of "Volcanic Inferno" once per turn.
   de:
   es:
   fr:
@@ -34,6 +34,31 @@ images:
 - index: 1
   image: VolcanicInferno-DP28-JP-R.png
 sets:
+  en:
+  - set_number: LD10-EN024
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Super Rare
+  de:
+  - set_number: LD10-DE024
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Super Rare
+  fr:
+  - set_number: LD10-FR024
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Super Rare
+  it:
+  - set_number: LD10-IT024
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: LD10-PT024
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Super Rare
   ja:
   - set_number: DP28-JP024
     set_name: 'Duelist Pack: Duelists of Explosion'
@@ -42,9 +67,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 924874
