--- a/data/cards/84755744.yaml
+++ b/data/cards/84755744.yaml
@@ -1,7 +1,7 @@
 konami_id: 18910
 password: 84755744
 name:
-  en: Salamangreat Teeger
+  en: Salamangreat Tiger
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 转生炎兽 跳虎
 text:
   en: |-
-    You can discard 1 other "Salamangreat" card; Special Summon this card from your hand. You can only use this effect of "Salamangreat Teeger" once per turn. If this card you control would be used as Synchro Material for a FIRE monster, you can treat it as a non-Tuner. Once per turn: You can increase or decrease this card's Level by 1.
+    You can discard 1 other "Salamangreat" card; Special Summon this card from your hand. You can only use this effect of "Salamangreat Tiger" once per turn. If this card you control would be used as Synchro Material for a FIRE monster, you can treat it as a non-Tuner. Once per turn: You can increase or decrease this card's Level by 1.
   de:
   es:
   fr:
@@ -37,8 +37,33 @@ series:
 - Salamangreat
 images:
 - index: 1
-  image: SalamangreatTeeger-DP28-JP-R.png
+  image: SalamangreatTiger-DP28-JP-R.png
 sets:
+  en:
+  - set_number: LD10-EN003
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: LD10-DE003
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: LD10-FR003
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: LD10-IT003
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: LD10-PT003
+    set_name: 'Legendary Duelists: Soulburning Volcano'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DP28-JP003
     set_name: 'Duelist Pack: Duelists of Explosion'
@@ -47,9 +72,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 934345
